--- a/css/custom.css
+++ b/css/custom.css
@@ -14,12 +14,15 @@ body{
     font-family:  "Inter", "Helvetica Neue", Helvetica, "Arial","M PLUS 1p", "a-otf-ud-shin-go-pr6n", "Noto Sans JP",  "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-weight: 400;
     color: #545454;
-    padding-top: 80px;
 }
 
 h1, h2, h3, h4, h5, h6{
     font-family: "Inter", "Helvetica Neue", Helvetica, "Arial", "M PLUS 1p", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
     font-weight:700;
+}
+
+.padding-top-80px {
+    padding-top: 80px;
 }
 
 .jumbotron-top {
@@ -28,7 +31,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .shadow0{
-    text-shadow:2px 2px 3px #000;
+    text-shadow:0px 0px 5px #000;
 }
 
 .twitterbtn {
@@ -49,13 +52,15 @@ h1, h2, h3, h4, h5, h6{
 /* 600px〜959px：タブレット */
 @media screen and (min-width:600px) and (max-width:959px){
     .jumbotron-top {
-        padding:100px;
+        padding-top:100px;
+        padding-bottom:100px;
     }
 }
 
 /* 960px～1279px：小型PC */
 @media screen and (min-width:960px){
     .jumbotron-top {
-        padding:200px
+        padding-top:200px;
+        padding-bottom:200px;
     }
 }
