--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,7 @@ body{
     font-family:  "Inter", "Helvetica Neue", Helvetica, "Arial","M PLUS 1p", "a-otf-ud-shin-go-pr6n", "Noto Sans JP",  "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-weight: 400;
     color: #545454;
+    padding-top: 80px;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -21,17 +22,14 @@ h1, h2, h3, h4, h5, h6{
     font-weight:700;
 }
 
-.padding-top-80px {
-    padding-top: 80px;
-}
 
 .jumbotron-top {
-     background:url(../images/top/top_jumbotron.jpg) center no-repeat;
-     background-size: cover;
+    background:url(../images/top/top_jumbotron.jpg) center no-repeat;
+    background-size: cover;
 }
 
 .shadow0{
-    text-shadow:0px 0px 5px #000;
+    text-shadow:0px 0px 3px #000;
 }
 
 .twitterbtn {
@@ -44,6 +42,12 @@ h1, h2, h3, h4, h5, h6{
     background-color: #008EE0;
 }
 
+/* ～479px：SP縦 */
+@media screen and (max-width:479px) {
+    .jumbotron-top {
+        background-position-y: 30%;
+    }
+}
 
 /* 480px〜599px：SP横 */
 @media screen and (min-width:480px) and (max-width:599px) {
