--- a/css/custom.css
+++ b/css/custom.css
@@ -6,12 +6,12 @@
 }
 
 :root{
-    --font-family-sans-serif: -apple-system, "BlinkMacSystemFont", "Inter", "Helvetica Neue", Helvetica, "Arial", "a-otf-ud-shin-go-pr6n", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-sans-serif: "メイリオ", Meiryo, -apple-system, "BlinkMacSystemFont", "Inter", "Helvetica Neue", Helvetica, "Arial", "a-otf-ud-shin-go-pr6n", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 body{
-    font-family:  "Inter", "Helvetica Neue", Helvetica, "Arial","M PLUS 1p", "a-otf-ud-shin-go-pr6n", "Noto Sans JP",  "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Inter", "Helvetica Neue", Helvetica, "Arial", "メイリオ", Meiryo, "Noto Sans JP",  "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-weight: 400;
     color: #545454;
     padding-top: 80px;
